Fixed wrapping links in top modules, removed 'matching' terminology from default coders page conditionally, cleaned profile page to ready for re-work

--- a/public/stylesheets/railsrankings_v2.css
+++ b/public/stylesheets/railsrankings_v2.css
@@ -252,6 +252,7 @@ a.rank_list {
 	margin-left: 18px;
 	height: 30px;
 	line-height: 30px;
+	width: auto;
 }
 
 #top_coders ul {
